apps/storage-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: csi-test-pod
  namespace: default
spec:
  containers:
  - name: test-container
    image: busybox
    command: [ "sh", "-c", "echo 'CSI Works!' > /data/test.txt && sleep 3600" ]
    volumeMounts:
    - name: test-volume
      mountPath: /data
  volumes:
  - name: test-volume
    persistentVolumeClaim:
      claimName: csi-test-pvc
