apps/argo-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-route
  namespace: argocd
spec:
  parentRefs:
  - name: homelab-gateway
    namespace: nginx-gateway
  hostnames:
  - "argo.matheus.me"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        set:
        - name: "X-Forwarded-Proto"
          value: "https"
    backendRefs:
    - name: argocd-server
      port: 80
