apps/backstage-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backstage-route
  namespace: backstage
spec:
  parentRefs:
  - name: nginx
    namespace: nginx-gateway
  hostnames:
  - "backstage.matheus.me"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: backstage
      port: 7007
