apps/dashy-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dashy-route
  namespace: tools
spec:
  parentRefs:
  - name: homelab-gateway
    namespace: nginx-gateway
  hostnames:
  - "dashy.matheus.me"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: dashy
      port: 8080
