apps/weave-gitops-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: weave-gitops-route
  namespace: weave-gitops
spec:
  parentRefs:
  - name: homelab-gateway
    namespace: nginx-gateway
  hostnames:
  - "weave.matheus.me"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        set:
        - name: "X-Forwarded-Proto"
          value: "https"
    backendRefs:
    - name: weave-gitops
      port: 80
